fixed footer left alignment, for sure

--- a/templates/static/css/screen.css
+++ b/templates/static/css/screen.css
@@ -321,8 +321,7 @@ tr.bottom {
 	border-top: 1px solid silver; 
 	}
 #footer ul {
-	margin-top: 0; 
-	margin-bottom: 0; 
+	margin: 0 0 0 21em;
 	padding: 0 0 1em 0; 
 	list-style-type: none; 
 	}
@@ -331,7 +330,6 @@ tr.bottom {
 	border-color: silver;
 	border-style: solid;
 	border-width: 0 1px 1px;
-	margin-left: 21em;
 	padding: 2px 40px;
 	}
 #footer a {
